# Weeb

./: .gitignore  README.md  meson.build  requirements.in  requirements.txt
build-aux/flatpak/: com.github.RozeFound.Weeb.json  com.github.RozeFound.Weeb.yaml  pypi-dependencies.yaml
data/: com.github.RozeFound.Weeb.desktop.in  com.github.RozeFound.Weeb.gschema.xml  com.github.RozeFound.Weeb.metainfo.xml.in  meson.build  style.css  weeb.gresource.xml
data/icons/: meson.build
data/ui/: board.blp  help_overlay.blp  meson.build  preferences.blp  tag.blp  tags.blp  tile.blp  window.blp
po/: POTFILES  meson.build
weeb/: meson.build
weeb/backend/: constants.in  constants.py  downloader.py  meson.build  primitives.py  providers_manager.py  settings.py
weeb/backend/providers/: danbooru.py  meson.build
weeb/backend/utils/: downloader.py  expected.py  meson.build  paths.py  singleton.py  thread_runner.py  threading.py
weeb/frontend/: main.py  meson.build  weeb.in
weeb/frontend/views/: board.py  flow_grid.py  meson.build  preferences.py  stream_image.py  tags.py  tile.py  window.py
weeb/frontend/widgets/: flow_grid.py  meson.build  stream_image.py
